# recursive-reasoning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  job_run.sh  main.py  pyproject.toml  run_job.sh  test_bptt.py
configs/: config.yaml
configs/presets/: quick.yaml  transformer_standard.yaml  trm_standard.yaml
logs/20260113_155258/: config.json
logs/trm-e5-d1k-dim128-20260113_155913/: config.json
scripts/: analyze_saliency.py  evaluate_recursion.py  generate_random_trmv2.py  run_experiments.sh  run_hpo.py  tiny.sh  visualize_trajectories.py
scripts/mi/: aggregate_mi_results.py  aggregate_seeds.py  causal_interventions.py  circuit_discovery.py  exp1_causal_interventions.py  exp2_representation_similarity.py  exp3_information_bottleneck.py  exp4_intrinsic_dimensionality.py  exp5_ood_blanks_sweep.py  exp6_superposition_analysis.py  exp7_token_mixer_dissection.py  exp8_circuit_discovery.py  information_bottleneck.py  intrinsic_dimensionality.py  ood_blanks_sweep.py  representation_similarity.py  run_all_checkpoints.py  run_mi_experiments.sh  superposition_analysis.py  token_mixer_dissection.py
scripts/mi/shared/: model_loader.py  multi_checkpoint.py  plotting.py  sudoku_utils.py  trajectory_utils.py
src/: __init__.py  config.py  distributed.py  experiment.py  hpo.py  logging_utils.py  training.py  trajectories.py
src/data/: __init__.py  base.py  sudoku.py
src/data/tasks/: __init__.py  base.py  sudoku.py
src/models/: __init__.py  heads.py  losses.py  lstm.py  mlp.py  transformer.py  trm.py  trm_operator.py  utils.py
tests/: __init__.py  test_config.py  test_data.py  test_mi_shared.py  test_models.py  test_training.py
